2025-10-14T01:16:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18482481533 # 796
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1123 1603 / 1137 1617
* notice: next accum: outdated-unq outdated-all / unq all: 1124 1604 / 1138 1618
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-30] / [2025-10-13]

2025-10-13T01:21:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18452455511 # 795
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-13
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1120 1600 / 1136 1616
* notice: next accum: outdated-unq outdated-all / unq all: 1123 1603 / 1137 1617
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-28 2025-09-29] / [2025-10-12]

2025-10-12T01:20:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18437216194 # 794
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-12
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 1120 1600 / 1135 1615
* notice: next accum: outdated-unq outdated-all / unq all: 1120 1600 / 1136 1616
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-28 2025-10-11]

2025-10-11T01:13:46Z: