@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-14T01:16:36Z",
-  "count_outdated" : 1604,
-  "uniques_outdated" : 1124,
-  "count" : 1618,
-  "uniques" : 1138,
+  "timestamp" : "2025-10-15T01:18:33Z",
+  "count_outdated" : 1605,
+  "uniques_outdated" : 1125,
+  "count" : 1619,
+  "uniques" : 1139,
   "clones" : [
-    {
-      "timestamp": "2025-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-02T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
