@@ -1,3 +1,12 @@
+2025-10-15T01:18:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18514726778 # 797
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
+* notice: last 14d: unq all: 5 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 1124 1604 / 1138 1618
+* notice: next accum: outdated-unq outdated-all / unq all: 1125 1605 / 1139 1619
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-10-01] / [2025-10-15]
+
 2025-10-14T01:16:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18482481533 # 796
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
